Add postgres db using docker + dependency injection
